# Scan2CADRasterizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
samples/: annot.json  scannet_0470_00_0_pose.txt  scannet_0470_00_intr.txt
src/: Grid.h  Rasterizer.cpp  Rasterizer.h  Triangle.h  main.cpp
tests/: demo.ipynb  demo_pt3d.ipynb  test.py
